--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "normalize.css": "^8.0.1",
     "pixel-glass": "^1.0.13",
